--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,4 +1,5 @@
+skip-steps: test_all
 replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/datadog
-destination: ./build
+catalog-base-url: https://giantswarm.github.io/giantswarm-playground-catalog/
