--- a/helm/datadog/Chart.yaml
+++ b/helm/datadog/Chart.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: v2
 name: datadog
 version: 2.10.13
 appVersion: "7"
@@ -15,3 +15,14 @@ sources:
 maintainers:
 - name: Datadog
   email: support@datadoghq.com
+dependencies:
+  - name: datadog-crds
+    version: "=0.1.1"
+    repository: https://helm.datadoghq.com
+    condition: clusterAgent.metricsProvider.useDatadogMetrics
+    tags:
+    - install-crds
+  - name: kube-state-metrics
+    version: "=2.13.0"
+    repository: https://kubernetes.github.io/kube-state-metrics
+    condition: datadog.kubeStateMetricsEnabled
