--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -3,3 +3,4 @@ replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/datadog
 catalog-base-url: https://giantswarm.github.io/giantswarm-playground-catalog/
+ct-config: ./.circleci/ct-config.yaml
