--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -4,4 +4,4 @@ generate-metadata: true
 chart-dir: ./helm/datadog
 catalog-base-url: https://giantswarm.github.io/giantswarm-playground-catalog/
 ct-config: ./.circleci/ct-config.yaml
-kubelinter-config: ./.circleci/kube-linter.yaml
+kubelinter-config: .circleci/kube-linter.yaml
