--- a/helm/datadog/.kube-linter.yaml
+++ b/helm/datadog/.kube-linter.yaml
@@ -1,2 +1,9 @@
 checks:
-  doNotAutoAddDefaults: true
+  addAllBuiltIn: true
+  exclude:
+  - "unset-cpu-requirements"
+  - "unset-memory-requirements"
+  - "no-read-only-root-fs"
+  - "run-as-non-root"
+  # Chart dependency 'datadog-crds' defines a CRD using apiextensions.k8s.io/v1beta1
+  - "no-extensions-v1beta"
