Squashed 'helm/datadog/' changes from a0ec631..a232d83
a232d83 [orchestration] [rbac] update apps to support sts (#315)
8b466ff [datadog] bump agent and cluster-agent version (#341)
eea62ba Prepare move to `main` as default branch (#340)
471aed1 [datadog] Clarify container include/exclude with warning (#332)
8baf2ca chart/datadog: update datadog-crds to 0.3.2 (#328)
af5d1bc Rename datadog/ci files to ensure they're run by ct (#329)
81d008c The queen is dead/agent version bump (#326)
9c26035 Update link to kube-state-metrics chart (#325)
418a480 Remove ref to readonly for socket mounts in trace agent container for Windows (#318)
e317d04 [datadog] fix `should-enable-k8s-resource-monitoring` definition (#321)
e527eb8 [datadog] Fix volumeMount for the `trace-agent` on windows (#313)
5b5fef1 [datadog] Fix release process after kube-state-metrics registry update (#311)
457ce7f [datadog] move to the new kube-state-metrics chart registry (#309)
a46f200 Fix descriptions for Agent, DCA, and Check Runner rbac.serviceAccountName (#302)
47bc1ed [datadog] Fix missing DD_TAGS envvar in cluster-agent deployment (#306)
971ed0a Honor `doNotCheckTag` in Env AD detection, preventing install failures with custom images using non semver tags (#303)
ac15cc6 [datadog] Expose UDS for Dogstatsd in an emptyDir volume by default (#300)
fd34d36 [datadog] update DCA image to 1.13.1 (#301)
eba7591 [datadog] update agent and cluster-agent image tags (#293)
3f17e3c enable template expansion for Cluster Agent annotations and Service Account (#288)
a6e1245 Fix failures with Helm2 (remove one way of detecting cluster is OpenShift) (#280)
bf9e9bf [datadog] Rename DCA's RoleBinding (#277)
4b6cded [dca] [rbac] Add new RBAC rules for daemonsets (#242)
3ef4959 [datadog] Document and update Autodiscovery management (#276)
28aa139 [datadog-agent] Use pod name as cluster check runner ID (#275)
1181f29 Mount `/var/log/containers` for better logs file scanning with short-lived containers. (#250)
3735ffe Revert 

--- a/templates/_container-agent.yaml
+++ b/templates/_container-agent.yaml
@@ -74,7 +74,7 @@
     - name: DD_HEALTH_PORT
     {{- $healthPort := .Values.agents.containers.agent.healthPort }}
       value: {{ $healthPort | quote }}
-    {{- if .Values.datadog.dogstatsd.useSocketVolume }}
+    {{- if eq .Values.targetSystem "linux" }}
     - name: DD_DOGSTATSD_SOCKET
       value: {{ .Values.datadog.dogstatsd.socketPath | quote }}
     {{- end }}
@@ -90,6 +90,22 @@
     {{- if .Values.datadog.prometheusScrape.enabled }}
     - name: DD_PROMETHEUS_SCRAPE_ENABLED
       value: "true"
+    {{- if .Values.datadog.prometheusScrape.additionalConfigs }}
+    - name: DD_PROMETHEUS_SCRAPE_CHECKS
+      value: {{ .Values.datadog.prometheusScrape.additionalConfigs | toJson | quote }}
+    {{- end }}
+    {{- end }}
+    {{- $ignoreAutoConfig := .Values.datadog.ignoreAutoConfig }}
+    {{- if and .Values.datadog.kubeStateMetricsCore.enabled .Values.datadog.kubeStateMetricsCore.ignoreLegacyKSMCheck }}
+      {{- $ignoreAutoConfig = append $ignoreAutoConfig "kubernetes_state" }}
+    {{- end }}
+    {{- if not (empty $ignoreAutoConfig) }}
+    - name: DD_IGNORE_AUTOCONF
+      value: {{ join " " $ignoreAutoConfig | quote }}
+    {{- end }}
+    {{- if .Values.datadog.checksCardinality }}
+    - name: DD_CHECKS_TAG_CARDINALITY
+      value: {{ .Values.datadog.checksCardinality | quote }}
     {{- end }}
 {{- if .Values.agents.containers.agent.env }}
 {{ toYaml .Values.agents.containers.agent.env | indent 4 }}
@@ -124,10 +140,8 @@
       subPath: datadog.yaml
     {{- end }}
     {{- if eq .Values.targetSystem "linux" }}
-    {{- if .Values.datadog.dogstatsd.useSocketVolume }}
     - name: dsdsocket
       mountPath: {{ (dir .Values.datadog.dogstatsd.socketPath) }}
-    {{- end }}
     {{- if or .Values.datadog.systemProbe.enableTCPQueueLength .Values.datadog.systemProbe.enableOOMKill }}
     - name: sysprobe-socket-dir
       mountPath: /var/run/sysprobe
@@ -152,6 +166,10 @@
       mountPath: /var/log/pods
       mountPropagation: {{ .Values.datadog.hostVolumeMountPropagation }}
       readOnly: true
+    - name: logscontainerspath
+      mountPath: /var/log/containers
+      mountPropagation: {{ .Values.datadog.hostVolumeMountPropagation }}
+      readOnly: true
     {{- if not .Values.datadog.criSocketPath }}
     - name: logdockercontainerpath
       mountPath: /var/lib/docker/containers
@@ -171,6 +189,9 @@
       mountPath: C:/ProgramData/docker/containers
       readOnly: true
     {{- end }}
+    {{- end }}
+    {{- if .Values.datadog.kubelet.hostCAPath }}
+{{ include "datadog.kubelet.volumeMount" . | indent 4 }}
     {{- end }}
 {{- if .Values.agents.volumeMounts }}
 {{ toYaml .Values.agents.volumeMounts | indent 4 }}
