--- a/templates/kube-state-metrics-network-policy.yaml
+++ b/templates/kube-state-metrics-network-policy.yaml
@@ -3,12 +3,9 @@ apiVersion: "networking.k8s.io/v1"
 kind: NetworkPolicy
 metadata:
   name: {{ template "datadog.fullname" . }}-kube-state-metrics
+  namespace: {{ .Release.Namespace }}
   labels:
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app.kubernetes.io/name: "{{ template "datadog.fullname" . }}"
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+{{ include "datadog.labels" . | indent 4 }}
 spec:
   podSelector:
     matchLabels:
