--- a/templates/cluster-agent-psp.yaml
+++ b/templates/cluster-agent-psp.yaml
@@ -4,11 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ template "datadog.fullname" . }}-cluster-agent
   labels:
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app.kubernetes.io/name: "{{ template "datadog.fullname" . }}"
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+{{ include "datadog.labels" . | indent 4 }}
 spec:
   volumes:
     - configMap
