--- a/templates/secret-application-key.yaml
+++ b/templates/secret-application-key.yaml
@@ -4,12 +4,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "datadog.appKeySecretName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app.kubernetes.io/name: "{{ template "datadog.fullname" . }}"
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+{{ include "datadog.labels" . | indent 4 }}
 type: Opaque
 data:
   app-key: {{ default "MISSING" .Values.datadog.appKey | b64enc | quote }}
