--- a/templates/secret-cluster-agent-token.yaml
+++ b/templates/secret-cluster-agent-token.yaml
@@ -4,12 +4,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "clusterAgent.tokenSecretName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app.kubernetes.io/name: "{{ template "datadog.fullname" . }}"
-    app.kubernetes.io/instance: {{ .Release.Name | quote }}
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
+{{ include "datadog.labels" . | indent 4 }}
 type: Opaque
 data:
   {{ if .Values.clusterAgent.token -}}
