--- a/helm/datadog/.kube-linter.yaml
+++ b/helm/datadog/.kube-linter.yaml
@@ -5,5 +5,10 @@ checks:
   - "unset-memory-requirements"
   - "no-read-only-root-fs"
   - "run-as-non-root"
+  - "required-annotation-email"
+  - "required-label-owner"
+  - "no-liveness-probe"
+  - "no-readiness-probe"
+  - "sensitive-host-mounts"
   # Chart dependency 'datadog-crds' defines a CRD using apiextensions.k8s.io/v1beta1
   - "no-extensions-v1beta"
