Add helm repo to ct-config.yaml

--- a/.circleci/ct-config.yaml
+++ b/.circleci/ct-config.yaml
@@ -2,3 +2,4 @@
 chart-repos:
 - datadog-crds=https://helm.datadoghq.com
 - kube-state-metrics=https://kubernetes.github.io/kube-state-metrics
+- prometheus-community=https://prometheus-community.github.io/helm-charts
