--- a/helm/datadog/Chart.yaml
+++ b/helm/datadog/Chart.yaml
@@ -8,7 +8,7 @@ keywords:
 - alerting
 - metric
 home: https://www.datadoghq.com
-icon: https://datadog-live.imgix.net/img/dd_logo_70x75.png
+icon: https://s.giantswarm.io/app-icons/datadog/1/light.svg
 sources:
 - https://app.datadoghq.com/account/settings#agent/kubernetes
 - https://github.com/DataDog/datadog-agent
