Squashed 'helm/datadog/' changes from a232d83..989d79c
989d79c Fix defaults to run on GS clusters
d3128ba Update README with updated NPM instructions (#573)
e96b691 Encore use of `root` user for the node agent (#577)
fc50d16 [charts/datadog] Add option to collect events in Helm check (#572)
b61625b DATADOG-CHART: Use last version of datadog-crds dependency (#566)
dc323a5 [datadog] Bump agent version to 7.34 (#561)
dae062d Bumping default version of the Datadog Agent to 7.33.1 (#560)
a1b7846 Add shareprocessns parameter (#558)
387e85a feat(datadog): add option to disable CRI socket access (#552)
7370d21 Allow sending Agent Flares in CiliumNetworkPolicy (#556)
d6a98fb [datadog] Fix Helm check scheduling (#551)
f998c98 Update cluster-agent RBAC for new resources (#356)
af7426e [datadog] Add support for Helm check (#548)
d7916c5 feat: add rbacs for ingress resources collection (#547)
d31c165 Fix agents.podAnnotations (#546)
f21f03d [datadog] Add note about Cluster-Agent HA recommendation (#532)
c4e2325 [orchestrator] support pv and pvc (#523)
0aeaeb9 Add a parameter to setup automatic multi-line log detection (#531)
3bc88c1 [datadog] rename the APM port in the local traffic policy service from `apm` to `traceport` (#528)
96f7576 Document clusterAgent.tolerations (#522)
752cd41 [datadog] Default agent image to 7.33.0 (#524)
9db1d2a Add agents.podSecurity.allowedUnsafeSysctls parameter to datadog chart (#508)
251e1a6 Fix warning by removing unknown key (#515)
ac38bc4 Update cluster-agent's podAntiAffinity from required to preferred (#521)
5cc2bcc Do not declare the volumes for `/etc/*-release` if there is no `system-probe` (#509)
0dc85e9 Fix some typos in comments (#505)
eaffa33 Remove deprecation warning caused by datadog.apm.enabled parameter (#466)
3f18a4e Update example mysql confs (#501)
fd4a7d3 fix(datadog): fix DCA SCC creation on openshift 3 (#500)
8f018ba fix(datadog): PodDisruptionBudget api version with helm template cmd (#498)
e01d083 fix(datadog): environment

--- a/templates/agent-psp.yaml
+++ b/templates/agent-psp.yaml
@@ -8,21 +8,23 @@ metadata:
   annotations:
     {{- if .Values.agents.podSecurity.apparmor.enabled }}
     apparmor.security.beta.kubernetes.io/allowedProfileNames: {{ join "," .Values.agents.podSecurity.apparmorProfiles | quote }}
-    apparmor.security.beta.kubernetes.io/defaultProfileName: "runtime/default"
+    apparmor.security.beta.kubernetes.io/defaultProfileName: {{ .Values.agents.podSecurity.defaultApparmor | default "runtime/default" }}
     {{- end }}
     seccomp.security.alpha.kubernetes.io/allowedProfileNames: {{ join "," .Values.agents.podSecurity.seccompProfiles | quote }}
     seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
 spec:
   privileged: {{ .Values.agents.podSecurity.privileged }}
   hostNetwork: {{ .Values.agents.useHostNetwork }}
-  {{- if or .Values.datadog.dogstatsd.useHostPort .Values.datadog.apm.enabled }}
+  {{- if or .Values.datadog.dogstatsd.useHostPort (eq  (include "trace-agent-use-tcp-port" .) "true") }}
   hostPorts:
   - min: 8125
     max: 8126
   {{- end }}
   hostPID: {{ or (eq  (include "should-enable-compliance" .) "true") .Values.datadog.dogstatsd.useHostPID }}
-  allowedCapabilities: 
+  allowedCapabilities:
 {{ toYaml .Values.agents.podSecurity.capabilities | indent 4 }}
+  allowedUnsafeSysctls:
+{{ toYaml .Values.agents.podSecurity.allowedUnsafeSysctls | indent 4 }}
   volumes:
 {{ toYaml .Values.agents.podSecurity.volumes | indent 4 }}
   fsGroup:
