--- a/templates/agent-clusterchecks-cilium-network-policy.yaml
+++ b/templates/agent-clusterchecks-cilium-network-policy.yaml
@@ -41,8 +41,10 @@ specs:
           - matchName: {{ trimPrefix "https://" $.Values.datadog.dd_url }}
           {{- end}}
           {{- if $.Values.datadog.site}}
+          - matchName: "app.{{ $.Values.datadog.site }}"
           - matchPattern: "*-app.agent.{{ $.Values.datadog.site }}"
           {{- else}}
+          - matchName: "app.datadoghq.com"
           - matchPattern: "*-app.agent.datadoghq.com"
           {{- end}}
         toPorts:
