--- a/templates/rbac.yaml
+++ b/templates/rbac.yaml
@@ -104,6 +104,11 @@ rules:
   - leases
   verbs:
   - get
+{{- if eq (include "need-secret-permissions" .) "true" }}
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get"]
+{{- end }}
 ---
 apiVersion: {{ template "rbac.apiVersion" . }}
 kind: ClusterRoleBinding
