--- a/templates/agent-clusterchecks-rbac.yaml
+++ b/templates/agent-clusterchecks-rbac.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.clusterChecksRunner.rbac.create (eq (include "should-deploy-cluster-agent" .) "true") .Values.datadog.clusterChecks.enabled .Values.clusterChecksRunner.enabled .Values.clusterChecksRunner.rbac.dedicated -}}
+{{- if or (eq (include "should-enable-cluster-check-workers" .) "true") .Values.clusterChecksRunner.rbac.dedicated -}}
 apiVersion: {{ template "rbac.apiVersion" . }}
 kind: ClusterRoleBinding
 metadata:
