--- a/templates/agent-network-policy.yaml
+++ b/templates/agent-network-policy.yaml
@@ -20,7 +20,7 @@ spec:
         - port: {{ $.Values.datadog.dogstatsd.port }}
           protocol: UDP
 {{- end }}
-{{- if $.Values.datadog.apm.enabled }}
+{{- if eq  (include "trace-agent-use-tcp-port" .) "true" }}
     - # Ingress for APM trace
       ports:
         - port: {{ $.Values.datadog.apm.port }}
