Squashed 'helm/datadog/' changes from 989d79c..76846fb
76846fb Set default to run on new clusters with SE linux disable

git-subtree-dir: helm/datadog
git-subtree-split: 76846fbcefaaab1ec0877ad84f101e232334bc4a

--- a/values.yaml
+++ b/values.yaml
@@ -907,11 +907,11 @@ agents:
     # @default -- Must run as spc_t
     seLinuxContext:
       rule: MustRunAs
-      seLinuxOptions:
-        user: system_u
-        role: system_r
-        type: spc_t
-        level: s0
+      seLinuxOptions: {}
+    #    user: system_u
+    #    role: system_r
+    #    type: spc_t
+    #    level: s0
 
     # agents.podSecurity.privileged -- If true, Allow to run privileged containers
     privileged: false
