Python layout thingy

--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,4 +1,4 @@
-skip-steps: validate static_check
+skip-steps: [validate, static_check]
 replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/datadog
