--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,6 +1,8 @@
-skip-steps: [validate, static_check]
-replace-chart-version-with-git: true
-generate-metadata: true
 chart-dir: ./helm/datadog
+replace-chart-version-with-git: true
+replace-app-version-with-git: false
+generate-metadata: true
+destination: ./build
 catalog-base-url: https://giantswarm.github.io/giantswarm-playground-catalog/
+skip-steps: validate
 ct-config: ./.circleci/ct-config.yaml
