--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ workflows:
       - architect/push-to-app-catalog:
           context: architect
           executor: "app-build-suite"
-          name: "package and push datadog chart to giantswarm catalog"
+          name: "package and push datadog chart"
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
           chart: "datadog"
